refactor: 1.21.11 compat